# IPlate

./: CMakeLists.txt  IPlateTest.cpp  plateRecognize.py
PlateAssist/: CMakeLists.txt
PlateAssist/include/: pipeline.h  segmentationFreeRecognizer.h
PlateAssist/src/: fastDeskew.cpp  segmentationFreeRecognizer.cpp
include/: IPlate.h  fineTuning.h  plate.h  plateDetection.h  util.h
python/: PyIPlateRecognize.cpp
src/: fineTuning.cpp  plate.cpp  plateDetection.cpp
